# PolyInsightEngine

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: config.rs  db.rs  main.rs  models.rs
backend/src/adapters/: llm.rs  mod.rs  oracle.rs
backend/src/api/: routes.rs
backend/src/db/: clickhouse.rs  redis.rs
backend/src/models/: adapters.rs  api.rs
backend/src/services/: clob.rs  gamma.rs  mod.rs  scorer.rs  signals.rs  smart_money.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/market/[id]/: page.tsx
scripts/: rewrite-history-drop-build-deps.sh
spec/: cost.md  op.md  prd.md  tdd.md  whitepaper.md
