[package]
name = "polyinsight-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
polars = { version = "0.45", features = ["lazy", "dtype-full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
clickhouse = { version = "0.11", features = ["uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-stream = "0.1"
rand = "0.8"
